--- a/argo/cluster.yaml
+++ b/argo/cluster.yaml
@@ -12,5 +12,5 @@ spec:
     directory:
       recurse: true
     path: cluster
-    repoURL: https://github.ibm.com/bjzhoujc/openshift-gitops-getting-started
+    repoURL: https://github.com/nvzjc/openshift-gitops-getting-started
     targetRevision: HEAD
